# Esercitazione1

Esercitazione1/: CMakeLists.txt  calcolo_medie  calcolo_medie.cpp  prog1  prog_par.cpp
